--- a/Model Evaluation - Tutorial.ipynb
+++ b/Model Evaluation - Tutorial.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "465c1f7b",
    "metadata": {},
    "outputs": [
@@ -67,16 +67,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0007448565616955083\n"
+      "0.014944714963717397\n"
      ]
     }
    ],
    "source": [
     "# import MSE from sklearn\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
     "\n",
     "# compute MSE\n",
-    "MSE = mean_squared_error(y_true,y_pred)  \n",
+    "MSE = root_mean_squared_error(y_true,y_pred)  \n",
     "\n",
     "# print MSE\n",
     "print(MSE)\n"
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "6cbf93b0",
    "metadata": {},
    "outputs": [
@@ -102,8 +102,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.02729206041499081\n",
-      "0.02729206041499081\n"
+      "0.12224857857544764\n",
+      "0.014944714963717397\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
     "print(RMSE)\n",
     "\n",
     "# RMSE by sklearn\n",
-    "RMSE = mean_squared_error(y_true,y_pred,squared=False)\n",
+    "RMSE = root_mean_squared_error(y_true,y_pred)\n",
     "print(RMSE)\n"
    ]
   },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "af353f2c",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "2c17af46",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "7bcef6eb",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8000000000000002\n"
+      "0.8\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "7f599d39",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "bootcamp",
    "language": "python",
    "name": "python3"
   },
@@ -290,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
